# HavenFrame

./: .env.example  .gitattributes  .gitignore  AGENTS.md  API_PROVIDER_MATRIX.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_REPORT.md  CODEBASE_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELETION_REVIEW.md  LOCAL_DEPLOYMENT_AUDIT.md  LOCAL_DEPLOYMENT_TEST_PLAN.md  MOBILE_ARCHITECTURE.md  MODEL_ENDPOINT_AUDIT.md  PLATFORM_FEATURE_MATRIX.md  README.md  RELEASE_NOTES.md  RELEASE_READINESS.md  SECURITY.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  desktop_test_status.bat  pytest.ini  start_desktop_test.bat  stop_desktop_test.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev-5174.conf.json
app/src-tauri/capabilities/: main.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
backend/: main.py  requirements.txt  sidecar_entry.py
docs/: CLOSED_RELEASE_GATE_20260716.md  CODEX_RULES.md  MANUAL_ACCEPTANCE_BASELINE.md  MANUAL_ACCEPTANCE_ISSUES.md  MANUAL_FULL_FUNCTIONAL_ACCEPTANCE_CHECKLIST.md  MOBILE_CRASH_AUDIT_20260716.md  OPEN_SOURCE_RELEASE.md  PRE_PACKAGE_DELIVERY_CHECKLIST.md  PROJECT_SPEC.md  QUALITY_SCORE_20260716.md  RELEASE_SOURCE_OF_TRUTH_20260716.md  USER_GUIDE_BILINGUAL.md
mobile-expo/: .easignore  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json
scripts/: build-backend-sidecar.py  build-desktop-local.py  desktop-test-common.ps1  secret_scan.py  (+14 more)
(+174 files in other folders)
