[package]
name = "interior-ai-studio"
version = "0.2.0-rc.12"
description = "HavenFrame desktop"
authors = ["HavenFrame contributors"]
license = "AGPL-3.0-or-later"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
